# yargi-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  asgi_app.py  docker-compose.yml  mcp_server_main.py  pyproject.toml  run_asgi.py
.serena/: project.yml
.serena/memories/: anayasa_mahkemesi_architecture.md
